# biggo

./: big-go.code-workspace
microgo/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  docker-compose.server.yml  docker-compose.yml  nginx.conf  pyproject.toml
microgo/bootstrap/mariadb/: init.sql
microgo/bootstrap/mongodb/: init-mongo.js
microgo/env/: .db.env.example  .env.example
microgo/lib/auth/: __init__.py  auth copy.py  auth.py
microgo/lib/config/: __init__.py
microgo/lib/errors/: __init__.py  errors.py
microgo/lib/file_access/: __init__.py  file_access.py
microgo/lib/img_process/: __init__.py
microgo/lib/log/: __init__.py  log.py  module_log.py  utils.py
microgo/microgo/file_access/: __init__.py  file_access.py
microgo/microgo/message_queue/: __init__.py
microgo/monolith/: .env.example  Dockerfile  config.py  gunicorn_config.py  index.py  instantiation.py  run_server.sh  server.py  wsgi.py
microgo/monolith/controllers/: __init__.py  authentication.py  download_ctrl.py  upload_ctrl.py
microgo/monolith/middleware/: authenticate_route.py
microgo/monolith/modules/auth/: __init__.py  auth.py
microgo/monolith/modules/config/: __init__.py
microgo/monolith/modules/file_access/: file_access.py
microgo/rabbitmq/: Dockerfile  definitions.json  generate_password.sh
microgo/service-observer/: Makefile  celery.go  constant.go  go.mod  go.sum  main.go  mongodb.go  sql.go
microgo/tests/: haha.py  test_login_route.py  test_upload_route.py
microgo/worker/: publisher copy.py  publisher.py  run_worker.sh  worker.py
(+33 files in other folders)
